fix: quote box overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 html, body, #root {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
 }
 
 #wrapper {
@@ -62,6 +62,10 @@ a {
 
   #quote-box {
     max-width: 250px;
+  }
+
+  #new-quote {
+    font-size: 0.8rem;
   }
 
 }
